<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:parentActivityName="HomeFragment"
    tools:context=".About">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:src="@drawable/ptp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:text="@string/created"
            android:textColor="@color/abc_secondary_text_material_light" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/created"
            android:layout_centerHorizontal="true"
            android:text="@string/bearDroid"
            android:textColor="@color/abc_secondary_text_material_light" />
    </RelativeLayout>

    <Button
        android:id="@+id/play"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/background_material_dark"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/twitter"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="#4099FF"
        android:text="@string/twitter"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/gplus"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="#D34836"
        android:text="@string/gplus"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>