<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/poopdialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Base.Theme.AppCompat.Light.Dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/dialogTitle"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <RelativeLayout
        android:id="@+id/ratingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:text="@string/rating"
            android:textColor="#000"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/ratingGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:theme="@style/Base.Theme.AppCompat.Light.Dialog">

            <RadioButton
                android:id="@+id/goodbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goodbutton"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/okaybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okaybutton"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/badbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/badbutton"
                android:textSize="20sp" />
        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:id="@+id/minutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/minutesTitle"
        android:textColor="#000"
        android:textSize="24sp" />

    <NumberPicker
        android:id="@+id/numberpicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minutesText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light" />

    <RadioGroup
        android:id="@+id/overtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/numberpicker"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp">
        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/timeAndHalf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/doubleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"/>
        </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/overtime"
        android:paddingLeft="64dp"
        android:paddingRight="64dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:layout_weight="1"
            android:textSize="20sp"
            textColor/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:layout_weight="1"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:layout_weight="0"
            android:textSize="20sp"/>
        </LinearLayout>

</RelativeLayout>