<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/poopdialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Base.Theme.AppCompat.Light.Dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dialogTitle"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:scrollbarStyle="insideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/ratingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:text="@string/rating"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/ratingGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:theme="@style/Base.Theme.AppCompat.Light.Dialog">

                    <RadioButton
                        android:id="@+id/goodbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goodbutton"
                        android:textSize="20sp"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/okaybutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/okaybutton"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/badbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/badbutton"
                        android:textSize="20sp" />
                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:id="@+id/minutesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/minutesTitle"
                android:textColor="#000"
                android:textSize="24sp" />

            <NumberPicker
                android:id="@+id/numberpicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/minutesText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:id="@+id/overtimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/numberpicker"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:paddingTop="0dp"
                android:text="@string/overtime"
                android:textColor="#000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/overtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/overtimeTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="0dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="x1"
                    android:textColor="@color/black" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="x1.5"
                    android:textColor="@color/black" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="x2"
                    android:textColor="@color/black" />
            </RadioGroup>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
